--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -12,12 +12,14 @@ flake8==3.5.0
 idna==2.7
 imagesize==1.1.0
 Jinja2==2.10
+livereload==2.5.2
 MarkupSafe==1.0
 mccabe==0.6.1
 packaging==17.1
 pathtools==0.1.2
 pkginfo==1.4.2
 pluggy==0.7.1
+port-for==0.3.1
 py==1.6.0
 pycodestyle==2.3.1
 pyflakes==1.6.0
@@ -32,7 +34,9 @@ requests-toolbelt==0.8.0
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.7.1
+sphinx-autobuild==0.7.1
 sphinxcontrib-websupport==1.1.0
+tornado==5.1
 tox==2.9.1
 tqdm==4.25.0
 twine==1.10.0
