--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,13 +2,18 @@ alabaster==0.7.11
 argh==0.26.2
 attrs==18.2.0
 Babel==2.6.0
+backports-abc==0.5
 bumpversion==0.5.3
 certifi==2018.8.24
 chardet==3.0.4
 click==6.7
+configparser==3.5.0
 coverage==4.5.1
 docutils==0.14
+enum34==1.1.6
 flake8==3.5.0
+funcsigs==1.0.2
+futures==3.2.0
 idna==2.7
 imagesize==1.1.0
 Jinja2==2.10
@@ -19,7 +24,7 @@ mccabe==0.6.1
 packaging==17.1
 pathtools==0.1.2
 pkginfo==1.4.2
-pluggy==0.7.1
+pluggy==0.6.0
 port-for==0.3.1
 py==1.6.0
 pycodestyle==2.3.1
@@ -32,6 +37,7 @@ pytz==2018.5
 PyYAML==3.13
 requests==2.19.1
 requests-toolbelt==0.8.0
+singledispatch==3.4.0.3
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.7.1
@@ -41,6 +47,7 @@ tornado==5.1
 tox==2.9.1
 tqdm==4.25.0
 twine==1.10.0
+typing==3.6.6
 urllib3==1.23
 virtualenv==16.0.0
 watchdog==0.8.3
