--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,17 +1,13 @@
 alabaster==0.7.11
 argh==0.26.2
+atomicwrites==1.2.1
 attrs==18.2.0
 Babel==2.6.0
 backports-abc==0.5
-bumpversion==0.5.3
 certifi==2018.8.24
 chardet==3.0.4
-click==6.7
-configparser==3.5.0
 coverage==4.5.1
 docutils==0.14
-enum34==1.1.6
-flake8==3.5.0
 funcsigs==1.0.2
 futures==3.2.0
 idna==2.7
@@ -20,34 +16,29 @@ Jinja2==2.10
 livereload==2.5.2
 lxml==4.2.5
 MarkupSafe==1.0
-mccabe==0.6.1
+more-itertools==4.3.0
 packaging==17.1
+pathlib2==2.3.2
 pathtools==0.1.2
-pkginfo==1.4.2
-pluggy==0.6.0
+pluggy==0.7.1
 port-for==0.3.1
 py==1.6.0
-pycodestyle==2.3.1
-pyflakes==1.6.0
 Pygments==2.2.0
 pyparsing==2.2.0
-pytest==3.4.2
-pytest-runner==2.11.1
+pytest==3.8.0
+pytest-cov==2.6.0
 pytz==2018.5
 PyYAML==3.13
 requests==2.19.1
-requests-toolbelt==0.8.0
+scandir==1.9.0
 singledispatch==3.4.0.3
 six==1.11.0
 snowballstemmer==1.2.1
-Sphinx==1.7.1
+Sphinx==1.7.9
 sphinx-autobuild==0.7.1
 sphinxcontrib-websupport==1.1.0
 tornado==5.1
-tox==2.9.1
-tqdm==4.25.0
-twine==1.10.0
 typing==3.6.6
 urllib3==1.23
-virtualenv==16.0.0
-watchdog==0.8.3
+watchdog==0.9.0
+xmlunittest==0.5.0
