--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ python:
   - 3.4
   - 2.7
 
+# Command to install system dependencies
+before_install:
+  - sudo apt-get install libxmlsec1-dev pkg-config
+
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
 
