--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,17 +1,22 @@
 alabaster==0.7.11
+appdirs==1.4.3
 argh==0.26.2
 atomicwrites==1.2.1
 attrs==18.2.0
+autopep8==1.4
 Babel==2.6.0
 backports-abc==0.5
+cached-property==1.5.1
 certifi==2018.8.24
 chardet==3.0.4
 coverage==4.5.1
+defusedxml==0.5.0
 docutils==0.14
 funcsigs==1.0.2
-futures==3.1.1
+futures==3.2.0
 idna==2.7
 imagesize==1.1.0
+isodate==0.6.0
 Jinja2==2.10
 livereload==2.5.2
 lxml==4.2.5
@@ -20,9 +25,11 @@ more-itertools==4.3.0
 packaging==17.1
 pathlib2==2.3.2
 pathtools==0.1.2
+pkgconfig==1.4.0
 pluggy==0.7.1
 port-for==0.3.1
 py==1.6.0
+pycodestyle==2.4.0
 Pygments==2.2.0
 pyparsing==2.2.0
 pytest==3.8.0
@@ -30,6 +37,7 @@ pytest-cov==2.6.0
 pytz==2018.5
 PyYAML==3.13
 requests==2.19.1
+requests-toolbelt==0.8.0
 scandir==1.9.0
 singledispatch==3.4.0.3
 six==1.11.0
@@ -41,4 +49,6 @@ tornado==5.1
 typing==3.6.6
 urllib3==1.23
 watchdog==0.9.0
+xmlsec==1.3.3
 xmlunittest==0.5.0
+zeep==3.1.0
