--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,6 +1,7 @@
 alabaster==0.7.11
 appdirs==1.4.3
 argh==0.26.2
+asn1crypto==0.24.0
 atomicwrites==1.2.1
 attrs==18.2.0
 autopep8==1.4
@@ -8,14 +9,18 @@ Babel==2.6.0
 backports-abc==0.5
 cached-property==1.5.1
 certifi==2018.8.24
+cffi==1.11.5
 chardet==3.0.4
 coverage==4.5.1
+cryptography==2.3.1
 defusedxml==0.5.0
 docutils==0.14
+enum34==1.1.6
 funcsigs==1.0.2
 futures==3.1.1
 idna==2.7
 imagesize==1.1.0
+ipaddress==1.0.22
 isodate==0.6.0
 Jinja2==2.10
 livereload==2.5.2
@@ -25,11 +30,13 @@ more-itertools==4.3.0
 packaging==17.1
 pathlib2==2.3.2
 pathtools==0.1.2
+pbr==4.2.0
 pkgconfig==1.4.0
 pluggy==0.7.1
 port-for==0.3.1
 py==1.6.0
 pycodestyle==2.4.0
+pycparser==2.19
 Pygments==2.2.0
 pyparsing==2.2.0
 pytest==3.8.0
@@ -50,4 +57,5 @@ typing==3.6.6
 urllib3==1.23
 watchdog==0.9.0
 xmlsec==1.3.3
+xmlunittest==0.5.0
 zeep==3.1.0
