--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -38,6 +38,7 @@ py==1.6.0
 pycodestyle==2.4.0
 pycparser==2.19
 Pygments==2.2.0
+pyOpenSSL==18.0.0
 pyparsing==2.2.0
 pytest==3.8.0
 pytest-cov==2.6.0
