--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -42,6 +42,7 @@ pyOpenSSL==18.0.0
 pyparsing==2.2.0
 pytest==3.8.0
 pytest-cov==2.6.0
+python-dateutil==2.7.3
 pytz==2018.5
 PyYAML==3.13
 requests==2.19.1
