Update requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ pytest-cov==2.6.0
 python-dateutil==2.7.3
 pytz==2018.5
 PyYAML==3.13
-requests==2.19.1
+requests>=2.20.0
 requests-toolbelt==0.8.0
 scandir==1.9.0
 singledispatch==3.4.0.3
