Add codecov to tox

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 facturark
+commands = flake8 facturark 
 
 [testenv]
 setenv =
@@ -23,5 +23,6 @@ deps =
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
+    codecov
 
 
