--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps = flake8
 commands = flake8 facturark 
 
 [testenv]
+passenv = TOXENV CI TRAVIS TRAVIS_*
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
@@ -23,6 +24,4 @@ deps =
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
-    codecov
-
-
+    codecov -t CODECOV_TOKEN -e TOXENV
