Pass codecov token

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps = flake8
 commands = flake8 facturark 
 
 [testenv]
-passenv = TOXENV CI TRAVIS TRAVIS_*
+passenv = CODECOV_TOKEN TOXENV CI TRAVIS TRAVIS_*
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
