Add coverage to commands in tox

--- a/tox.ini
+++ b/tox.ini
@@ -23,4 +23,6 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
-    py.test --basetemp={envtmpdir}
+    ;py.test --basetemp={envtmpdir}
+    pytest --cov-report term-missing --cov-branch --cov facturark tests
+    codecov -t CODECOV_TOKEN
