Remove token from command

--- a/tox.ini
+++ b/tox.ini
@@ -25,4 +25,4 @@ commands =
     pip install -U pip
     ;py.test --basetemp={envtmpdir}
     pytest --cov-report term-missing --cov-branch --cov facturark tests
-    codecov -t CODECOV_TOKEN
+    codecov
