Generate QR code through the imager class

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ packaging==17.1
 pathlib2==2.3.2
 pathtools==0.1.2
 pbr==4.2.0
+Pillow==5.3.0
 pkgconfig==1.4.0
 pluggy==0.7.1
 port-for==0.3.1
@@ -46,6 +47,7 @@ pytest-cov==2.6.0
 python-dateutil==2.7.3
 pytz==2018.5
 PyYAML==3.13
+qrcode==6.0
 requests==2.20.1
 requests-toolbelt==0.8.0
 scandir==1.9.0
